--- a/Berners Street .html
+++ b/Berners Street .html
@@ -1,4 +1,4 @@
-<tw-storydata name="Berners Street " startnode="1" creator="Twine" creator-version="2.2.1" ifid="241E6239-A58E-486E-9D3B-710AA8E8657C" zoom="0.6" format="SugarCube" format-version="2.21.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">html{
+<tw-storydata name="Berners Street " startnode="1" creator="Twine" creator-version="2.2.1" ifid="241E6239-A58E-486E-9D3B-710AA8E8657C" zoom="0.25" format="SugarCube" format-version="2.21.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">html{
 font-family:Georgia,serif;
 }
 #story{
@@ -64,11 +64,13 @@ width: 200px;
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">Dialog.addClickHandler("#some-element", null, function () {
     Dialog.setup("My Dialog Title", "my-dialog-class");
     Dialog.wiki(Story.get("MyDialogContents").processText());
 });
 Config.history.controls = false;
+
 
 
 
@@ -335,7 +337,7 @@ Hook speaks up again. //“Don’t give me that flustered look, boy! It’ll be 
 Hook laughs wholeheartedly at my response. Then comes over to tap my shoulder.
 //“Give it a try at least, won’t you? We’ll meet up tomorrow morning, I’ll hand you everything you’ll need. And then, you just take the whole day to assemble as big of a crowd as you can down at Berners.”//
 A silenced sigh escapes you. But, after all you’ve been, at least more or less, persuaded to obey.
-Hook gives you a few other tasks for the present day; and leaves you with that; expecting you tomorrow morning.
+&#39;&#39;fettt&#39;&#39;Hook gives you a few other tasks for the present day; and leaves you with that; expecting you tomorrow morning.//
 
 [[Accept it -&gt;Continue]] 
 [[Try to talk Hook out of the idea-&gt;Talk Hook out of the idea, explaining how nonsensical this all is.]]
